syntax = "proto3";

import "google/protobuf/any.proto";

package messages;
option go_package=".;messages";

message RpcMsgMessage {
    int32   SequenceID          = 1;
    int32   Qos                 = 2;
	google.protobuf.Any Message = 3;    
}